Preparing for Render Target abstraction for post processing.

--- a/cpp-folders/CMakeLists.txt
+++ b/cpp-folders/CMakeLists.txt
@@ -47,3 +47,4 @@ add_subdirectory("src/hello-pixel-primitives")
 add_subdirectory("src/hello-shaders")
 add_subdirectory("src/hello-parallelization")
 add_subdirectory("src/hello-3d-primitives")
+add_subdirectory("src/hello-render-target")
