some sound exps.

--- a/cpp-folders/CMakeLists.txt
+++ b/cpp-folders/CMakeLists.txt
@@ -48,3 +48,4 @@ add_subdirectory("src/hello-shaders")
 add_subdirectory("src/hello-parallelization")
 add_subdirectory("src/hello-3d-primitives")
 add_subdirectory("src/hello-render-target")
+add_subdirectory("src/other-exps")
