Light Shafts exps.

--- a/cpp-folders/src/hello-render-target/CMakeLists.txt
+++ b/cpp-folders/src/hello-render-target/CMakeLists.txt
@@ -85,3 +85,12 @@ if (MSVC)
 else()
   target_compile_options(HelloPBR PRIVATE -O3 -ffast-math -mavx2 -mfma)
 endif()
+
+add_executable(HelloPBRLightShafts hello_pbr_light_shafts.cpp)
+target_compile_features(HelloPBRLightShafts PRIVATE cxx_std_20)
+target_link_libraries(HelloPBRLightShafts PRIVATE xsimd ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+if (MSVC)
+  target_compile_options(HelloPBRLightShafts PRIVATE /O2 /fp:fast /arch:AVX2)
+else()
+  target_compile_options(HelloPBRLightShafts PRIVATE -O3 -ffast-math -mavx2 -mfma)
+endif()
