Windows 11 CMake and VCPKG stuffs.

--- a/cpp-folders/src/hello-render-target/CMakeLists.txt
+++ b/cpp-folders/src/hello-render-target/CMakeLists.txt
@@ -20,7 +20,13 @@ set(CMAKE_CXX_STANDARD 20)
 if(NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE Release)
 endif()
-set(CMAKE_CXX_FLAGS "-Wall -Wextra")
+
+if (MSVC)
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /W4")
+else()
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
+endif()
+
 set(CMAKE_CXX_FLAGS_DEBUG "-g")
 set(CMAKE_CXX_FLAGS_RELEASE "-O3")
 
@@ -30,40 +36,40 @@ file(COPY obj DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 file(COPY images DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 
 add_executable(HelloPingPong hello_ping_pong.cpp)
-target_link_libraries(HelloPingPong PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+target_link_libraries(HelloPingPong PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 
 add_executable(HelloDepthOfField hello_depth_of_field.cpp)
-target_link_libraries(HelloDepthOfField PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+target_link_libraries(HelloDepthOfField PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 
 add_executable(HelloPerObjectMotionBlur hello_per_object_motion_blur.cpp)
-target_link_libraries(HelloPerObjectMotionBlur PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+target_link_libraries(HelloPerObjectMotionBlur PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 
 add_executable(HelloMultiPass hello_multi_pass.cpp)
-target_link_libraries(HelloMultiPass PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+target_link_libraries(HelloMultiPass PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 
 add_executable(HelloGlowingStar hello_glowing_star.cpp)
-target_link_libraries(HelloGlowingStar PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+target_link_libraries(HelloGlowingStar PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 
 add_executable(HelloCameraAndPerobjectMotionBlur hello_camera_and_perobject_motion_blur.cpp)
-target_link_libraries(HelloCameraAndPerobjectMotionBlur PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+target_link_libraries(HelloCameraAndPerobjectMotionBlur PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 
 add_executable(HelloShadowMapping hello_shadow_mapping.cpp)
-target_link_libraries(HelloShadowMapping PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+target_link_libraries(HelloShadowMapping PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 
 add_executable(HelloShadowMappingSoft hello_shadow_mapping_soft.cpp)
-target_link_libraries(HelloShadowMappingSoft PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+target_link_libraries(HelloShadowMappingSoft PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 
 add_executable(HelloWater hello_water.cpp)
-target_link_libraries(HelloWater PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+target_link_libraries(HelloWater PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 
 
 add_executable(HelloIblSkybox hello_ibl_skybox.cpp)
-target_link_libraries(HelloIblSkybox PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+target_link_libraries(HelloIblSkybox PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 
 
 add_executable(HelloIblSkyboxOpt hello_ibl_skybox_optimized.cpp)
 target_compile_features(HelloIblSkyboxOpt PRIVATE cxx_std_20)
-target_link_libraries(HelloIblSkyboxOpt PRIVATE xsimd ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+target_link_libraries(HelloIblSkyboxOpt PRIVATE xsimd ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 if (MSVC)
   target_compile_options(HelloIblSkyboxOpt PRIVATE /O2 /fp:fast /arch:AVX2)
 else()
@@ -72,7 +78,7 @@ endif()
 
 add_executable(HelloIblSkyboxXSIMD hello_ibl_skybox_xsimd.cpp)
 target_compile_features(HelloIblSkyboxXSIMD PRIVATE cxx_std_20)
-target_link_libraries(HelloIblSkyboxXSIMD PRIVATE xsimd ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+target_link_libraries(HelloIblSkyboxXSIMD PRIVATE xsimd ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 if (MSVC)
   target_compile_options(HelloIblSkyboxXSIMD PRIVATE /O2 /fp:fast /arch:AVX2)
 else()
@@ -82,7 +88,7 @@ endif()
 
 add_executable(HelloPBR hello_pbr.cpp)
 target_compile_features(HelloPBR PRIVATE cxx_std_20)
-target_link_libraries(HelloPBR PRIVATE xsimd ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+target_link_libraries(HelloPBR PRIVATE xsimd ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 if (MSVC)
   target_compile_options(HelloPBR PRIVATE /O2 /fp:fast /arch:AVX2)
 else()
@@ -91,7 +97,7 @@ endif()
 
 add_executable(HelloPBRLightShafts hello_pbr_light_shafts.cpp)
 target_compile_features(HelloPBRLightShafts PRIVATE cxx_std_20)
-target_link_libraries(HelloPBRLightShafts PRIVATE xsimd ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm -lassimp)
+target_link_libraries(HelloPBRLightShafts PRIVATE xsimd ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 if (MSVC)
   target_compile_options(HelloPBRLightShafts PRIVATE /O2 /fp:fast /arch:AVX2)
 else()
