switching to vcpkg for libraries on Ubuntu.

--- a/cpp-folders/src/hello-pixel-primitives/CMakeLists.txt
+++ b/cpp-folders/src/hello-pixel-primitives/CMakeLists.txt
@@ -1,14 +1,11 @@
 project(HelloPixel)
 
-find_package(SDL2 REQUIRED)
-find_package(SDL2_image REQUIRED)
-find_package(glm REQUIRED)
+find_package(SDL2 CONFIG REQUIRED)
+find_package(SDL2_image CONFIG REQUIRED)
+find_package(glm CONFIG REQUIRED)
+find_package(assimp CONFIG REQUIRED)
 
-find_package(Assimp REQUIRED)
-if(ASSIMP_FOUND)
-  include_directories(${ASSIMP_INCLUDE_DIR})
-endif() 
-
+include_directories(${ASSIMP_INCLUDE_DIR})
 include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIR})
 include_directories(${CMAKE_BINARY_DIR})
 
@@ -47,4 +44,4 @@ add_executable(HelloWatch hello_watch.cpp)
 target_link_libraries(HelloWatch Threads::Threads ${SDL2_LIBRARIES} glm::glm)
 
 add_executable(HelloTexture hello_texture.cpp)
-target_link_libraries(HelloTexture Threads::Threads ${SDL2_LIBRARIES} glm::glm ${SDL2_IMAGE_LIBRARIES})
+target_link_libraries(HelloTexture PRIVATE Threads::Threads SDL2::SDL2 SDL2_image::SDL2_image-static)
