--- a/cpp-folders/src/shs-renderer/CMakeLists.txt
+++ b/cpp-folders/src/shs-renderer/CMakeLists.txt
@@ -1,14 +1,11 @@
 project(SHSRenderer)
 
-find_package(SDL2 REQUIRED)
-find_package(SDL2_image REQUIRED)
-find_package(glm REQUIRED)
+find_package(SDL2 CONFIG REQUIRED)
+find_package(SDL2_image CONFIG REQUIRED)
+find_package(glm CONFIG REQUIRED)
+find_package(assimp CONFIG REQUIRED)
 
-find_package(Assimp REQUIRED)
-if(ASSIMP_FOUND)
-  include_directories(${ASSIMP_INCLUDE_DIR})
-endif() 
-
+include_directories(${ASSIMP_INCLUDE_DIR})
 include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIR})
 include_directories(${CMAKE_BINARY_DIR})
 include_directories(${stb_SOURCE_DIR}/)
