--- a/cpp-folders/src/hello-3d-primitives/CMakeLists.txt
+++ b/cpp-folders/src/hello-3d-primitives/CMakeLists.txt
@@ -5,6 +5,13 @@ find_package(SDL2_image CONFIG REQUIRED)
 find_package(glm CONFIG REQUIRED)
 find_package(assimp CONFIG REQUIRED)
 
+if(TARGET SDL2_image::SDL2_image)
+    add_library(SDL2_image::Main ALIAS SDL2_image::SDL2_image)
+else()
+    add_library(SDL2_image::Main ALIAS SDL2_image::SDL2_image-static)
+endif()
+
+
 include_directories(${ASSIMP_INCLUDE_DIR})
 include_directories(${SDL2_INCLUDE_DIRS} ${SDL2_IMAGE_INCLUDE_DIR})
 include_directories(${CMAKE_BINARY_DIR})
@@ -78,4 +85,4 @@ add_executable(HelloPipelineNormalZbufferDebug hello_pipeline_normal_zbuffer_deb
 target_link_libraries(HelloPipelineNormalZbufferDebug PRIVATE ${SDL2_IMAGE_LIBRARIES} ${SDL2_LIBRARIES} glm::glm assimp::assimp)
 
 add_executable(HelloPipelineTextureMapping hello_pipeline_texture_mapping.cpp)
-target_link_libraries(HelloPipelineTextureMapping PRIVATE SDL2::SDL2 SDL2_image::SDL2_image-static glm::glm assimp::assimp)
+target_link_libraries(HelloPipelineTextureMapping PRIVATE SDL2::SDL2 SDL2_image::Main glm::glm assimp::assimp)
