one assets folder, switched to png. and some compilation manual on MacOS

--- a/cpp-folders/CMakeLists.txt
+++ b/cpp-folders/CMakeLists.txt
@@ -57,3 +57,4 @@ add_subdirectory("src/hello-parallelization")
 add_subdirectory("src/hello-3d-primitives")
 add_subdirectory("src/hello-render-target")
 add_subdirectory("src/other-exps")
+add_subdirectory("src/hello-physics")
