MacOS specific CMakes

--- a/cpp-folders/CMakeLists.txt
+++ b/cpp-folders/CMakeLists.txt
@@ -57,4 +57,9 @@ add_subdirectory("src/hello-parallelization")
 add_subdirectory("src/hello-3d-primitives")
 add_subdirectory("src/hello-render-target")
 add_subdirectory("src/other-exps")
-add_subdirectory("src/hello-physics")
+if(NOT APPLE)
+    add_subdirectory("src/hello-physics")
+else()
+    message(STATUS "Skipping 'hello-physics' on macOS due to lack of native vcpkg PhysX support")
+endif()
+
