refactoring mega header into the chunked ones.

--- a/cpp-folders/CMakeLists.txt
+++ b/cpp-folders/CMakeLists.txt
@@ -63,3 +63,5 @@ else()
     message(STATUS "Skipping 'hello-physics' on macOS due to lack of native vcpkg PhysX support")
 endif()
 
+add_subdirectory("src/shs-renderer-lib")
+add_subdirectory("src/hello-plumbing")
