migration to shs-renderer-lib and some plumbing demo.

--- a/cpp-folders/src/hello-plumbing/CMakeLists.txt
+++ b/cpp-folders/src/hello-plumbing/CMakeLists.txt
@@ -4,14 +4,13 @@ project(HelloPlumbing LANGUAGES CXX)
 file(COPY ../assets DESTINATION "${CMAKE_CURRENT_BINARY_DIR}")
 
 
-add_executable(HelloPassPlumbing hello_pass_plumbing.cpp)
-target_link_libraries(HelloPassPlumbing PRIVATE shs::renderer)
+add_executable(HelloPassBasics hello_pass_basics.cpp)
+target_link_libraries(HelloPassBasics PRIVATE shs::renderer)
 if(MSVC)
-    target_compile_options(HelloPassPlumbing PRIVATE /W4)
+    target_compile_options(HelloPassBasics PRIVATE /W4)
 else()
-    target_compile_options(HelloPassPlumbing PRIVATE -Wall -Wextra -Wpedantic)
-    target_compile_options(HelloPassPlumbing PRIVATE $<$<CONFIG:Release>:-O3>)
-    target_compile_options(HelloPassPlumbing PRIVATE $<$<CONFIG:Debug>:-g>)
+    target_compile_options(HelloPassBasics PRIVATE -Wall -Wextra -Wpedantic)
+    target_compile_options(HelloPassBasics PRIVATE $<$<CONFIG:Release>:-O3>)
+    target_compile_options(HelloPassBasics PRIVATE $<$<CONFIG:Debug>:-g>)
 endif()
-target_compile_features(HelloPassPlumbing PRIVATE cxx_std_20)
-
+target_compile_features(HelloPassBasics PRIVATE cxx_std_20)
